--- a/index.html
+++ b/index.html
@@ -1,106 +1,246 @@
 <!doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+  <head>
+      <meta charset="utf-8">
+      <title>Digital agency Melbourne—Get Started—Responsive web design, UX &amp; website development</title>
+      <meta name="description" content="Get Started is a digital agency with 50+ specialists based in Melbourne, Sydney and Adelaide. Since 1999 we’ve been creating digital experiences that matter.">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <style>
-            body {
-                padding-top: 50px;
-                padding-bottom: 20px;
-            }
-        </style>
-        <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-        <link rel="stylesheet" href="css/main.css">
+      <link rel="stylesheet" href="css/bootstrap.min.css">
 
-        <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
-    </head>
-    <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Project name</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <form class="navbar-form navbar-right" role="form">
-            <div class="form-group">
-              <input type="text" placeholder="Email" class="form-control">
+      <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
+      <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+      <link rel="stylesheet" href="css/main.css">
+
+      <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+  </head>
+  <body>
+
+    <div class="wrapper">
+
+      <!--
+        -
+        -
+        - Header
+        -
+        -
+        -->
+      <header class="header">
+
+        <h1 class="header__logo">
+          <a href="/"><img src="img/logo.png" alt="Get started"></a>
+        </h1>
+
+        <div class="header__right-container">
+          <div class="header__nav-blcok">
+            <nav class="navigation" id="menu">
+              <ul class="navigation__list">
+                <li class="navigation__item"><a href="#to-but-updated"><span>Home</span></a></li>
+                <li class="navigation__item"><a href="#to-but-updated"><span>About</span></a></li>
+                <li class="navigation__item"><a href="#to-but-updated"><span>Work</span></a></li>
+                <li class="navigation__item"><a href="#to-but-updated"><span>Services</span></a></li>
+                <li class="navigation__item"><a href="#to-but-updated"><span>Blog</span></a></li>
+                <li class="navigation__item"><a href="#to-but-updated"><span>Contact</span></a></li>
+              </ul>
+            </nav>
+          </div>
+
+          <div class="header__search-block">
+            <div class="search">
+              <div class="search__container">
+                <form action="#to-be-updated" method="get" class="search__form" role="search">
+                  <input name="action" type="hidden" value="search">
+                  <div class="search__field-container">
+                    <input class="search__input" name="query" id="query" type="text">
+                    <label class="search__label" for="query">Search</label>
+                  </div>
+                  <button class="search__submit" type="submit">Search</button>
+                </form>
+              </div>
+              <div class="search__trigger"></div>
             </div>
-            <div class="form-group">
-              <input type="password" placeholder="Password" class="form-control">
+          </div>
+
+          <a class="navigation__trigger-mobile-nav">
+            <span class="visuallyhidden">Open mobile menu</span>
+          </a>
+        </div>
+
+      </header>
+
+
+
+
+      <!--
+        -
+        -
+        - hero carousel
+        -
+        -
+        -->
+      <div class="hero-carousel">
+        <ul class="hero-carousel__list">
+          <li class="hero-carousel__item">
+            <img src="img/content/hero-1.png" alt="We create digital experiences">
+            <div class="hero-carousel__content">
+              <h2 class="hero-carousel__heading">We <strong>Create Digital Experiences</strong> that matter</h2>
+              <a href="#to-be-updated" class="button">Find out more</a>
             </div>
-            <button type="submit" class="btn btn-success">Sign in</button>
-          </form>
-        </div><!--/.navbar-collapse -->
+          </li>
+          <li class="hero-carousel__item">
+            <img src="img/content/hero-2.png" alt="We create digital experiences">
+            <div class="hero-carousel__content">
+              <h2 class="hero-carousel__heading">We <strong>Create Digital Experiences</strong> that matter 2</h2>
+              <a href="#to-be-updated" class="button">Find out more</a>
+            </div>
+          </li>
+          <li class="hero-carousel__item">
+            <img src="img/content/hero-3.png" alt="We create digital experiences">
+            <div class="hero-carousel__content">
+              <h2 class="hero-carousel__heading">We <strong>Create Digital Experiences</strong> that matter 3</h2>
+              <a href="#to-be-updated" class="button">Find out more</a>
+            </div>
+          </li>
+        </ul>
+        <div class="hero-carousel__pager"></div>
       </div>
-    </nav>
 
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
-      <div class="container">
-        <h1>Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
-      </div>
-    </div>
 
-    <div class="container">
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+
+
+      <!--
+        -
+        -
+        - Intro text
+        -
+        -
+        -->
+      <div class="home__section">
+        <div class="container">
+          <div class="home__into">
+            Get Started is proud to have been creating digital experiences for 16 years. With a portfolio that includes some of the biggest names in Australian government, retail and the corporate sector, our knowledge and understanding of the digital world is well recognised.
+          </div>
         </div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-       </div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+      </div>
+
+
+
+
+      <!--
+        -
+        -
+        - Services
+        -
+        -
+        -->
+      <div class="home__section--grey">
+        <div class="container">
+          <h3 class="home__section-heading">Services</h3>
+          <div class="row">
+            <div class="home__service-list">
+              <div class="home__service-item col-md-4">
+                <h4 class="home__service-title">Strategy</h4>
+                <p class="home__service-summary">We aim to deliver actionable strategic advice and solutions that transform your user's digial experiences.</p>
+              </div>
+              <div class="home__service-item col-md-4">
+                <h4 class="home__service-title">Design</h4>
+                <p class="home__service-summary">Our award-winning design team are committed to quality and user experiences.</p>
+              </div>
+              <div class="home__service-item col-md-4">
+                <h4 class="home__service-title">Development</h4>
+                <p class="home__service-summary">Our development team can help you and your organisation with any complex technical problem.</p>
+              </div>
+            </div>
+            <div class="home__service-control">
+              <a href="#to-be-bupdated" class="button--orange">View all</a>
+            </div>
+          </div>
         </div>
       </div>
 
-      <hr>
 
-      <footer>
-        <p>&copy; Company 2015</p>
-      </footer>
-    </div> <!-- /container -->        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+      <!--
+        -
+        -
+        - Blog
+        -
+        -
+        -->
+      <div class="home__section">
+        <div class="container">
+          <h3 class="home__section-heading">Blog</h3>
+          <div class="row">
+            <div class="home__blog">
+              <div class="home__blog-list">
+                <div class="home__blog-item col-md-4">
+                  <img src="img/content/image-1.png" alt="Is your website a bad customer servant?">
+                  <span class="home__blog-category">News</span>
+                  <span class="home__blog-meta">Admin / January 25, 2016 8:08am</span>
+                  <h4 class="home__blog-title">Is your website a bad customer servant?</h4>
+                  <p class="home__blog-summary">There's no excuse for substandard online customer service these days. We now have the technology to deliver...</p>
+                  <a href="#to-be-updated" class="home__blog-link">Read more</a>
+                  <div class="home__blog-social">
+                    <a href="#to-be-updated" class="home__blog-social-link--chat">Comment</a>
+                    <a href="#to-be-updated" class="home__blog-social-link--heart">Like</a>
+                  </div>
+                </div>
+                <div class="home__blog-item col-md-4">
+                  <img src="img/content/image-2.png" alt="Is your website a bad customer servant?">
+                  <span class="home__blog-category">News</span>
+                  <span class="home__blog-meta">Admin / January 25, 2016 8:08am</span>
+                  <h4 class="home__blog-title">Upgrading to Kentico 9</h4>
+                  <p class="home__blog-summary">Now that the dust has settled following the release of a brand new version of Kentico, we've finally...</p>
+                  <a href="#to-be-updated" class="home__blog-link">Read more</a>
+                  <div class="home__blog-social">
+                    <a href="#to-be-updated" class="home__blog-social-link--chat">Comment</a>
+                    <a href="#to-be-updated" class="home__blog-social-link--heart">Like</a>
+                  </div>
+                </div>
+                <div class="home__blog-item col-md-4">
+                  <img src="img/content/image-3.png" alt="Is your website a bad customer servant?">
+                  <span class="home__blog-category">News</span>
+                  <span class="home__blog-meta">Admin / January 25, 2016 8:08am</span>
+                  <h4 class="home__blog-title">Evolution of the Digital Marketer</h4>
+                  <p class="home__blog-summary">The rapid transformation of digital marketing was the theme of a November panel event held at Get Start.</p>
+                  <a href="#to-be-updated" class="home__blog-link">Read more</a>
+                  <div class="home__blog-social">
+                    <a href="#to-be-updated" class="home__blog-social-link--chat">Comment</a>
+                    <a href="#to-be-updated" class="home__blog-social-link--heart">Like</a>
+                  </div>
+                </div>
+              </div>
+              <div class="home__blog-pager"></div>
+              <div class="home__blog-control">
+                <span class="home__blog-control-prev">Prev</span>
+                <span class="home__blog-control-next">Next</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
-        <script src="js/vendor/bootstrap.min.js"></script>
 
-        <script src="js/main.js"></script>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-        </script>
+
+
+        <footer>
+          <p>&copy; Company 2015</p>
+        </footer>
+      </div> 
+      <!-- /container -->
+
+    <!-- Vendor JS -->
+    <script src="js/vendor/jquery-1.11.2.min.js"></script>
+    <script src="js/vendor/jquery.carouFredSel-6.2.1-packed.js"></script>
+    <script src="js/vendor/jquery.mmenu.min.all.js"></script>
+    <script src="js/vendor/bootstrap.min.js"></script>
+
+    <!-- Custom JS -->
+    <script src="js/main.js"></script>
+
     </body>
 </html>
